deployment/apigw/traefik/routes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-auth-prefix
spec:
  stripPrefix:
    prefixes:
      - /auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-serv-prefix
spec:
  stripPrefix:
    prefixes:
      - /org
      - /fin
---

#apiVersion: traefik.containo.us/v1alpha1
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  #name: default-routes
  name: hrp-api
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`home-rp.ru`) && PathPrefix(`/org/api/v1/user`) && Method(`POST`)   # New user without auth
      kind: Rule
      services:
        - name: org
          namespace: home-rp
          port: 8000
      middlewares:
        - name: strip-serv-prefix
          namespace: home-rp

    - match: Host(`home-rp.ru`) && PathPrefix(`/org`)
      kind: Rule
      services:
        - name: org
          namespace: home-rp
          port: 8000
      middlewares:
        - name: strip-serv-prefix
          namespace: home-rp
        - name: auth
          namespace: home-rp

    - match: Host(`home-rp.ru`) && PathPrefix(`/fin`)
      kind: Rule
      services:
        - name: fin
          namespace: home-rp
          port: 8000
      middlewares:
        - name: strip-serv-prefix
          namespace: home-rp
        - name: auth
          namespace: home-rp

    - match: PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: auth
          namespace: home-rp
          port: 8000
      middlewares:
        - name: strip-auth-prefix
          namespace: home-rp
